--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0-beta.1",
     "@vue/cli-service": "~5.0.0-beta.1",
     "@vue/compiler-sfc": "^3.0.11",
+    "@vue/component-compiler-utils": "3.1.2",
     "@vue/eslint-config-prettier": "^6.0.0",
     "autoprefixer": "^10.2.6",
     "css-loader": "^4.2.2",
