--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-dist
 .DS_Store
 node_modules
-*.lock
-.env
+/dist
+storybook-static
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
